# Command-Line_Rust

./: .gitignore  README.md  command-line-rust
chapt01/: NOTE01.md
chapt01/hello/tests/: cli.rs
chapt02/: NOTE02.md
chapt02/echor/src/: main.rs
chapt02/echor/tests/: cli.rs
chapt03/: NOTE03.md
chapt03/catr/src/: lib.rs  main.rs
chapt04/: NOTE04.md
chapt04/headr/src/: lib.rs
chapt05/: NOTE05.md
chapt05/wcr/: Cargo.toml  spiders.txt
chapt05/wcr/src/: lib.rs  main.rs
chapt06/: NOTE06.md
chapt06/sortr/: Cargo.toml  mk-outs.sh
chapt06/sortr/src/: lib.rs  main.rs
chapt06/sortr/tests/: cli.rs
chapt06/uniqr/: Cargo.toml  three.txt.out
chapt06/uniqr/src/: lib.rs
chapt07/: NOTE07.md
chapt07/findr/: Cargo.toml
chapt07/findr/src/: lib.rs  main.rs
chapt08/: NOTE08.md
chapt08/Error_Handling_in_Rust/error_def/: Cargo.toml
chapt08/Error_Handling_in_Rust/error_double_string/: Cargo.toml
chapt08/Error_Handling_in_Rust/error_impl/: Cargo.toml
chapt08/Error_Handling_in_Rust/from_def/: Cargo.toml
chapt08/Error_Handling_in_Rust/from_examples/: Cargo.toml
chapt08/city-pop/: Cargo.toml
chapt08/city-pop/src/: main.rs
chapt08/csvtutor/: Cargo.toml
chapt08/parse_books/: Cargo.toml
chapt08/test_stringrecord/: Cargo.toml
chapt09/: NOTE09.md
chapt10/: NOTE10.md
chapt10/joinr/: Cargo.toml
chapt11/: NOTE11.md
chapt11/tailr/: 1M.txt  Cargo.toml
chapt12/: NOTE12.md
chapt12/fortuner/: Cargo.toml
chapt13/: NOTE13.md
chapt13/calr/: Cargo.toml
chapt13/dater/: Cargo.toml
chapt14/: NOTE14.md
chapt14/lsr/: err
(+86 files in other folders)
