[package]
name = "city-pop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "city-pop"


[dependencies]
csv = "1.0"
docopt = "1.0"
rustc-serialize = "0.3"
serde = { version = "1", features = ["derive"] }
